-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9.3
-
Fix Version/s: 0.9.3
-
Component/s: C glib - Compiler
-
Labels:None
-
Environment:
openSuse 13.2
-
Patch Info:Patch Available
Compiling the compiler produces this warning:
src/generate/t_c_glib_generator.cc: In member function ‘void t_c_glib_generator::generate_object(t_struct*)’: src/generate/t_c_glib_generator.cc:3122:59: warning: ‘etype’ may be used uninitialized in this function [-Wmaybe-uninitialized] if ((etype->is_base_type() && !etype->is_string())