THRIFT-3331 warning: ‘etype’ may be used uninitialized in this function Client: C_glib Patch: Simon South